--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@better-scroll/core": "^2.5.1",
         "axios": "^1.3.4",
         "fun-tab": "^0.0.1",
         "less-loader": "^11.1.0",
