--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
         "axios": "^1.3.4",
         "fun-tab": "^0.0.1",
         "less-loader": "^11.1.0",
+        "pinia": "^2.0.34",
         "swiper": "^9.1.1",
+        "vant": "^4.1.2",
         "vue": "^3.2.47",
         "vue-router": "^4.1.6"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.1.0",
+        "unplugin-vue-components": "^0.24.1",
         "vite": "^4.2.0"
     }
 }
