--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "dependencies": {
         "@better-scroll/core": "^2.5.1",
         "axios": "^1.3.4",
-        "fun-tab": "^0.0.1",
+        "fastclick": "^1.0.6",
         "less-loader": "^11.1.0",
         "pinia": "^2.0.34",
+        "qs": "^6.11.1",
         "swiper": "^9.1.1",
         "vant": "^4.1.2",
         "vue": "^3.2.47",
